--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -8,8 +8,8 @@
 # Note: include pgbouncer=true for Prisma compatibility with poolers.
 DATABASE_URL=postgresql://postgres.your_project_ref:your_password@aws-0-your-region.pooler.supabase.com:6543/postgres?pgbouncer=true&sslmode=require
 
-# If you run migrations and pooler causes issues, temporarily use direct DB URL:
-# DATABASE_URL=postgresql://postgres.your_project_ref:your_password@db.your_project_ref.supabase.co:5432/postgres?sslmode=require
+# Direct DB URL for migrations (non-pooler)
+DIRECT_URL=postgresql://postgres.your_project_ref:your_password@db.your_project_ref.supabase.co:5432/postgres?sslmode=require
 
 # --------------------------------------------------------------------
 # App / Auth
