Fix OAuth callback flow and mark API overview routes dynamic

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,7 +9,7 @@ NEXTAUTH_SECRET=replace-with-random-secret
 NEXT_PUBLIC_API_URL=http://localhost:3001/api/v1
 API_URL=http://localhost:3001/api/v1
 
-# OAuth providers for NextAuth (optional)
+# Optional OAuth for direct NextAuth provider flow
 GOOGLE_CLIENT_ID=replace-with-google-client-id
 GOOGLE_CLIENT_SECRET=replace-with-google-client-secret
 
