--- a/.env.production.example
+++ b/.env.production.example
@@ -11,7 +11,7 @@ NEXTAUTH_SECRET=replace-with-random-secret
 NEXT_PUBLIC_API_URL=https://simulation-cyww.onrender.com/api/v1
 API_URL=https://simulation-cyww.onrender.com/api/v1
 
-# OAuth (NextAuth frontend providers)
+# Optional OAuth for direct NextAuth provider flow
 GOOGLE_CLIENT_ID=replace-with-google-client-id
 GOOGLE_CLIENT_SECRET=replace-with-google-client-secret
 GITHUB_ID=replace-with-github-client-id
