--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -6,10 +6,13 @@
 # --------------------------------------------------------------------
 # Recommended for backend runtime (transaction pooler)
 # Note: include pgbouncer=true for Prisma compatibility with poolers.
+# Note: URL-encode special characters in the password (@ : / ? # [ ]).
 DATABASE_URL=postgresql://postgres.your_project_ref:your_password@aws-0-your-region.pooler.supabase.com:6543/postgres?pgbouncer=true&sslmode=require
 
-# Direct DB URL for migrations (non-pooler)
+# Direct DB URL for migrations (preferred when your host supports IPv6 egress)
 DIRECT_URL=postgresql://postgres.your_project_ref:your_password@db.your_project_ref.supabase.co:5432/postgres?sslmode=require
+# If your host cannot reach db.your_project_ref.supabase.co (Prisma P1001), use session pooler for migrations:
+# DIRECT_URL=postgresql://postgres.your_project_ref:your_password@aws-0-your-region.pooler.supabase.com:5432/postgres?sslmode=require
 
 # --------------------------------------------------------------------
 # App / Auth
@@ -33,8 +36,8 @@ REDIS_PASSWORD=
 # OAuth credentials (backend strategies)
 GOOGLE_CLIENT_ID=replace-with-google-client-id
 GOOGLE_CLIENT_SECRET=replace-with-google-client-secret
-GOOGLE_CALLBACK_URL=https://simulation-cyww.onrender.com/api/v1/auth/google/callback
+GOOGLE_CALLBACK_URL=https://your-backend-domain/api/v1/auth/google/callback
 
 GITHUB_CLIENT_ID=replace-with-github-client-id
 GITHUB_CLIENT_SECRET=replace-with-github-client-secret
-GITHUB_CALLBACK_URL=https://simulation-cyww.onrender.com/api/v1/auth/github/callback
+GITHUB_CALLBACK_URL=https://your-backend-domain/api/v1/auth/github/callback
