fix(auth): add production-safe API base fallback

--- a/.env.production.example
+++ b/.env.production.example
@@ -10,6 +10,8 @@ NEXTAUTH_SECRET=replace-with-random-secret
 # Backend API (deployed backend URL)
 NEXT_PUBLIC_API_URL=https://simulation-cyww.onrender.com/api/v1
 API_URL=https://simulation-cyww.onrender.com/api/v1
+# Optional fallback used when NEXT_PUBLIC_API_URL/API_URL is missing or set to localhost in production
+NEXT_PUBLIC_API_FALLBACK_URL=https://simulation-cyww.onrender.com/api/v1
 
 # Optional OAuth for direct NextAuth provider flow
 GOOGLE_CLIENT_ID=replace-with-google-client-id
