--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "build": "nest build",
+    "build": "prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
     "start:dev": "nest start --watch",
